@@ -1,6 +1,5 @@
 package com.menghor.ksit.feature.master.service.impl;
 
-import com.menghor.ksit.enumations.RoleEnum;
 import com.menghor.ksit.enumations.Status;
 import com.menghor.ksit.exceptoins.error.DuplicateNameException;
 import com.menghor.ksit.exceptoins.error.NotFoundException;
@@ -11,7 +10,6 @@ import com.menghor.ksit.feature.master.dto.response.ClassResponseDto;
 import com.menghor.ksit.feature.master.dto.update.ClassUpdateDto;
 import com.menghor.ksit.feature.master.mapper.ClassMapper;
 import com.menghor.ksit.feature.master.model.ClassEntity;
-import com.menghor.ksit.feature.master.model.DepartmentEntity;
 import com.menghor.ksit.feature.master.model.MajorEntity;
 import com.menghor.ksit.feature.master.repository.ClassRepository;
 import com.menghor.ksit.feature.master.repository.MajorRepository;
@@ -20,8 +18,6 @@ import com.menghor.ksit.feature.master.specification.ClassSpecification;
 import com.menghor.ksit.utils.database.CustomPaginationResponseDto;
 import com.menghor.ksit.utils.database.SecurityUtils;
 import com.menghor.ksit.utils.pagiantion.PaginationUtils;
-import jakarta.persistence.criteria.Join;
-import jakarta.persistence.criteria.JoinType;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -29,9 +25,6 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
-
-import java.util.Collections;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -80,7 +73,6 @@ public class ClassServiceImpl implements ClassService {
 
         return classMapper.toResponseDto(savedClass);
     }
-
 
     @Override
     public ClassResponseDto getClassById(Long id) {
@@ -203,123 +195,37 @@ public class ClassServiceImpl implements ClassService {
 
         UserEntity currentUser = securityUtils.getCurrentUser();
         log.info("Current user: {} with roles: {}", currentUser.getUsername(),
-                currentUser.getRoles().stream().map(role -> role.getName().name()).collect(Collectors.toList()));
+                currentUser.getRoles().stream().map(role -> role.getName().name()).toList());
 
-        // Determine user access level
-        if (hasAdminAccess(currentUser)) {
-            log.info("User has admin access, returning all classes");
-            return getAllClasses(filterDto);
-        } else if (isTeacherOrStaff(currentUser)) {
-            log.info("User is teacher/staff, filtering by department or classes they teach");
-            return getClassesForStaff(currentUser, filterDto);
-        } else if (isStudent(currentUser)) {
-            log.info("User is student, filtering by their own class");
-            return getClassesForStudent(currentUser, filterDto);
-        } else {
-            log.warn("User {} has unknown or no roles, returning empty classes", currentUser.getUsername());
-            return createEmptyClassResponse(filterDto);
-        }
+        // Validate and prepare pagination using PaginationUtils
+        Pageable pageable = PaginationUtils.createPageable(
+                filterDto.getPageNo(),
+                filterDto.getPageSize(),
+                "createdAt",
+                "DESC"
+        );
+
+        // Use the enhanced specification with role-based filtering
+        Specification<ClassEntity> spec = ClassSpecification.combineWithUserRole(
+                filterDto.getSearch(),
+                filterDto.getAcademyYear(),
+                filterDto.getStatus(),
+                filterDto.getMajorId(),
+                currentUser
+        );
+
+        // Execute query with specification and pagination
+        Page<ClassEntity> classPage = classRepository.findAll(spec, pageable);
+
+        // Map to response DTO
+        CustomPaginationResponseDto<ClassResponseDto> response = classMapper.toClassAllResponseDto(classPage);
+        log.info("User-specific classes retrieved successfully: {} classes (page {}/{})",
+                response.getContent().size(), response.getPageNo(), response.getTotalPages());
+
+        return response;
     }
 
     // ===== Private Helper Methods =====
-
-    private CustomPaginationResponseDto<ClassResponseDto> getClassesForStaff(UserEntity staff, ClassFilterDto filterDto) {
-        // For teachers/staff, show classes from their department
-        if (staff.getDepartment() == null) {
-            log.warn("Staff {} has no department assigned", staff.getUsername());
-            return createEmptyClassResponse(filterDto);
-        }
-
-        // Create specification that filters by department
-        Pageable pageable = PaginationUtils.createPageable(
-                filterDto.getPageNo(),
-                filterDto.getPageSize(),
-                "createdAt",
-                "DESC"
-        );
-
-        // Create specification with department filter
-        Specification<ClassEntity> spec = ClassSpecification.combine(
-                filterDto.getSearch(),
-                filterDto.getAcademyYear(),
-                filterDto.getStatus(),
-                null // Don't filter by majorId directly, we'll use department
-        ).and((root, query, criteriaBuilder) -> {
-            // Join with major and then department to filter by staff's department
-            Join<ClassEntity, MajorEntity> majorJoin = root.join("major", JoinType.INNER);
-            Join<MajorEntity, DepartmentEntity> departmentJoin = majorJoin.join("department", JoinType.INNER);
-            return criteriaBuilder.equal(departmentJoin.get("id"), staff.getDepartment().getId());
-        });
-
-        Page<ClassEntity> classPage = classRepository.findAll(spec, pageable);
-
-        CustomPaginationResponseDto<ClassResponseDto> response = classMapper.toClassAllResponseDto(classPage);
-        log.info("Retrieved {} classes for staff (page {}/{})",
-                response.getContent().size(), response.getPageNo(), response.getTotalPages());
-
-        return response;
-    }
-
-    private CustomPaginationResponseDto<ClassResponseDto> getClassesForStudent(UserEntity student, ClassFilterDto filterDto) {
-        if (student.getClasses() == null) {
-            log.warn("Student {} has no class assigned", student.getUsername());
-            return createEmptyClassResponse(filterDto);
-        }
-
-        Long classId = student.getClasses().getId();
-
-        // Create specification that only returns the student's class
-        Pageable pageable = PaginationUtils.createPageable(
-                filterDto.getPageNo(),
-                filterDto.getPageSize(),
-                "createdAt",
-                "DESC"
-        );
-
-        Specification<ClassEntity> spec = ClassSpecification.combine(
-                filterDto.getSearch(),
-                filterDto.getAcademyYear(),
-                filterDto.getStatus(),
-                null // Don't filter by majorId here
-        ).and((root, query, criteriaBuilder) ->
-                criteriaBuilder.equal(root.get("id"), classId)
-        );
-
-        Page<ClassEntity> classPage = classRepository.findAll(spec, pageable);
-
-        CustomPaginationResponseDto<ClassResponseDto> response = classMapper.toClassAllResponseDto(classPage);
-        log.info("Retrieved {} classes for student (page {}/{})",
-                response.getContent().size(), response.getPageNo(), response.getTotalPages());
-
-        return response;
-    }
-
-    private CustomPaginationResponseDto<ClassResponseDto> createEmptyClassResponse(ClassFilterDto filterDto) {
-        return CustomPaginationResponseDto.<ClassResponseDto>builder()
-                .content(Collections.emptyList())
-                .pageNo(filterDto.getPageNo() != null ? filterDto.getPageNo() : 1)
-                .pageSize(filterDto.getPageSize() != null ? filterDto.getPageSize() : 10)
-                .totalElements(0L)
-                .totalPages(0)
-                .last(true)
-                .build();
-    }
-
-    // Role checking methods
-    private boolean hasAdminAccess(UserEntity user) {
-        return user.getRoles().stream()
-                .anyMatch(role -> role.getName() == RoleEnum.ADMIN || role.getName() == RoleEnum.DEVELOPER);
-    }
-
-    private boolean isTeacherOrStaff(UserEntity user) {
-        return user.getRoles().stream()
-                .anyMatch(role -> role.getName() == RoleEnum.TEACHER || role.getName() == RoleEnum.STAFF);
-    }
-
-    private boolean isStudent(UserEntity user) {
-        return user.getRoles().stream()
-                .anyMatch(role -> role.getName() == RoleEnum.STUDENT);
-    }
 
     /**
      * Helper method to find a class by ID or throw NotFoundException
@@ -343,4 +249,3 @@ public class ClassServiceImpl implements ClassService {
                 });
     }
 }
-
